# atlasfetch

./: .env.example  .gitignore  ARCHITECTURE.md  CORRIGIR_403_ACCESS_DENIED.md  CORRIGIR_REDIRECT_URI.md  FLUXO.md  Makefile  Pipfile  SETUP_GMAIL.md  api.py  database.py  docker-compose.yml  email_reader.py  gmail_oauth.py  http_headers.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scheduler.py  scraper.py  scraper.txt  setup_gmail_oauth.py  sync_job.py
docs/: AMAZONAS_ENERGIA_SCRAPER.md  API_IA.md  API_MOBILE.md  DATABASE.md  DEPLOY_RAILWAY.md  EDUCADVENTISTA_SCRAPER.md  SCHEDULER.md  SETUP_GMAIL.md
postman/: atlasfetch-api.postman_collection.json
scripts/: add_unique_faturas_luz.sql  fetch_amazonas_faturas_abertas.py  migrate_faturas_escola_pix.py  migrate_faturas_escola_remove_data_json.py  migrate_faturas_escola_remove_student_id.py  migrate_faturas_luz_abertas.py  migrate_faturas_luz_unique.py  migrate_gmail_to_db.py  migration_tables_atlas.sql  setup_amazonas_energia_token.py  setup_gmail_oauth.py  test_api.sh
src/atlasfetch/: __init__.py
src/atlasfetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/atlasfetch/api/: __init__.py  app.py  container.py
src/atlasfetch/api/routes/: faturas.py  (+1 more)
src/atlasfetch/application/: __init__.py
src/atlasfetch/cli/: __init__.py  main.py
src/atlasfetch/domain/: __init__.py
tests/: conftest.py
tests/api/: test_faturas_routes.py  test_sync_routes.py
tests/application/: test_buscar_faturas.py  test_sincronizar_debitos.py
tests/domain/: test_referencia.py
(+15 files in other folders)
