[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasfetch"
version = "0.2.0"
description = "Scraper e API de faturas Águas de Manaus"
readme = "FLUXO.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
atlasfetch = "atlasfetch.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
